kickseed (0.45) UNRELEASED; urgency=low

  * Make ksdevice=link equivalent to leaving out ksdevice, since that's
    netcfg's default behaviour.
  * Make ksdevice=bootif emit a warning and be equivalent to leaving out
    ksdevice for now. Once netcfg supports being preseeded with a MAC
    address, this can be supported.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 14 Dec 2006 14:31:41 +0000

kickseed (0.44) feisty; urgency=low

  * Support --interpreter for %post scripts without --nochroot (pointed out
    by Jérôme Benois).
  * Fix broken %post argument parsing.
  * Run kickseed_post in test-kickseed again; this time, print a notice when
    a post-installation handler would be run.
  * Add Lintian override for no-standards-version-field; udebs don't need
    that.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 13 Dec 2006 10:01:36 +0000

kickseed (0.43) feisty; urgency=low

  * Handle /dev/ prefix on clearpart --drives transparently.
  * Try to install fs-core-modules and fs-secondary-modules for ext2 and
    vfat support (udebs renamed in Ubuntu feisty).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon,  4 Dec 2006 09:47:38 +0000

kickseed (0.42) feisty; urgency=low

  * 'clearpart' preseeds partman-auto/method, needed as of partman-auto 55.
  * finish-install.d/01kickseed: Provide a ks_log hook.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 29 Nov 2006 15:24:27 +0000

kickseed (0.41) edgy; urgency=low

  * Move from /usr/lib/prebaseconfig.d to /usr/lib/finish-install.d.
  * Make 'reboot' preseed finish-install/reboot_in_progress as well as
    prebaseconfig/reboot_in_progress (closes: Malone #65561).

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 11 Oct 2006 22:30:44 +0100

kickseed (0.40) edgy; urgency=low

  * Handle Kickstart files with DOS line endings (see Malone #61576).
  * test-kickseed: Adjust mktemp call to work with busybox.
  * Make 'clearpart --all' write out a partman auto.d script to clear the