@@ -1,0 +1,3 @@
+clearpart --all --initlabel
+part swap --recommended
+part / --fstype ext3 --size 1 --grow
